syntax = "proto3";
package randomtalk.chat.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/xfrr/randomtalk/proto/v1/chatpb";

// SessionStartedNotification is a message (event) sent when an user connects to the chat
// and a new chat session is created.
message SessionStartedNotification {
  string id = 1;
  string chat_session_id = 2;
  string user_id = 3;
  int32 user_age = 4;
  Gender user_gender = 5;
  double user_location_latitude = 6;
  double user_location_longitude = 7;
  bool is_user_authenticated = 8;
  UserPreferences user_preferences = 10;
  google.protobuf.Timestamp started_at = 9;
}

// UserPreferences contains the user preferences for the chat.
message UserPreferences {
  int32 min_age = 1;
  int32 max_age = 2;
  Gender gender = 3;
  double max_distance_km = 4;
  int32 max_wait_time_seconds = 5;
  repeated string interests = 6;
}

// Gender is an enum that represents the user gender.
enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}
